# amanithvg-sdk

./: CHANGES.md  LICENSE  README.md
cfgfile/: amanithvg.conf  amanithvg.ini
include/VG/: openvg.h  vgext.h  vgplatform.h  vgu.h
tutorials/01_setup/: CMakeLists.txt  README.md
tutorials/01_setup/CMake/: fix-bundle.cmake
tutorials/01_setup/CMake/toolchain/: android_mips64.cmake  android_x86_64.cmake  linux_armv6hf.cmake  linux_armv7.cmake  linux_mips.cmake  linux_mips64.cmake  qnx_armv7.cmake  qnx_x86.cmake
tutorials/01_setup/platform/android/: build.gradle  settings.gradle
tutorials/01_setup/platform/ios/: AppDelegate.h  View.h  View.m  ViewController.m
tutorials/01_setup/platform/linux/: main.c
tutorials/01_setup/platform/macosx/: info.plist.in  main.m
tutorials/01_setup/platform/win/: main.c
tutorials/01_setup/src/: tutorial_01.c  tutorial_01.h
tutorials/02_lingrad/: CMakeLists.txt  README.md
tutorials/02_lingrad/CMake/toolchain/: android_x86.cmake  ios_ub.cmake  linux_armv8.cmake  linux_ppc64.cmake  win_x86_64.cmake
tutorials/02_lingrad/platform/android/: settings.gradle
tutorials/02_lingrad/platform/ios/: AppDelegate.h  View.h  View.m  ViewController.m
tutorials/02_lingrad/platform/linux/: main.c
tutorials/02_lingrad/platform/macosx/: main.m  programs.metal  tutorial.icns
tutorials/02_lingrad/platform/win/: main.c  manifest.xml
tutorials/02_lingrad/src/: tutorial_02.c  tutorial_02.h
tutorials/03_radgrad/: CMakeLists.txt  README.md
tutorials/03_radgrad/CMake/toolchain/: android_armv5.cmake  linux_x86_64.cmake  osx_ub.cmake
tutorials/03_radgrad/platform/android/: settings.gradle
tutorials/03_radgrad/platform/ios/: AppDelegate.m  View.h  View.m
tutorials/03_radgrad/platform/linux/: main.c
tutorials/03_radgrad/platform/macosx/: info.plist.in  main.m
tutorials/03_radgrad/platform/win/: main.c
tutorials/03_radgrad/src/: tutorial_03.c  tutorial_03.h
tutorials/04_congrad/: CMakeLists.txt  README.md
tutorials/04_congrad/CMake/toolchain/: android_mips64.cmake  android_x86.cmake  ios_ub.cmake  linux_mips64.cmake  linux_ppc64.cmake  linux_x86_64.cmake  qnx_armv7.cmake  win_x86.cmake
tutorials/04_congrad/platform/android/: settings.gradle
tutorials/04_congrad/platform/ios/: View.h  View.m
tutorials/04_congrad/platform/linux/: main.c
tutorials/04_congrad/platform/macosx/: main.m
tutorials/04_congrad/platform/win/: main.c
tutorials/04_congrad/src/: tutorial_04.c  tutorial_04.h
tutorials/05_pattern/: CMakeLists.txt  README.md
tutorials/05_pattern/CMake/toolchain/: android_armv5.cmake  android_mips.cmake  ios_ub.cmake
tutorials/05_pattern/platform/android/: build.gradle  settings.gradle
tutorials/05_pattern/platform/ios/: AppDelegate.h  View.h  View.m  info.plist.in
tutorials/05_pattern/platform/linux/: main.c
tutorials/05_pattern/platform/macosx/: main.m
tutorials/05_pattern/platform/win/: main.c  tutorial.rc
tutorials/05_pattern/src/: tutorial_05.c  tutorial_05.h
tutorials/06_stroking/: CMakeLists.txt  README.md
tutorials/06_stroking/CMake/toolchain/: android_armv7.cmake  linux_armv5.cmake  linux_armv6hf.cmake  linux_armv7.cmake  linux_x86.cmake  linux_x86_64.cmake  win_x86_64.cmake
tutorials/06_stroking/platform/android/: settings.gradle
tutorials/06_stroking/platform/ios/: AppDelegate.m  View.h  View.m  ViewController.m  info.plist.in  main.m
tutorials/06_stroking/platform/linux/: main.c
tutorials/06_stroking/platform/macosx/: main.m
tutorials/06_stroking/platform/win/: main.c  resource.h
tutorials/06_stroking/src/: tutorial_06.c  tutorial_06.h
tutorials/07_compositing/: CMakeLists.txt  README.md
tutorials/07_compositing/CMake/: checkSystem.cmake
tutorials/07_compositing/CMake/toolchain/: android_armv7.cmake  android_armv8.cmake  linux_armv8.cmake  linux_mips64.cmake  win_x86.cmake  win_x86_64.cmake
tutorials/07_compositing/platform/android/: build.gradle  settings.gradle
tutorials/07_compositing/platform/ios/: View.h  View.m  ViewController.h  ViewController.m  info.plist.in
tutorials/07_compositing/platform/linux/: main.c
tutorials/07_compositing/platform/macosx/: main.m
tutorials/07_compositing/platform/win/: main.c
tutorials/07_compositing/src/: tutorial_07.c  tutorial_07.h
tutorials/08_imgwarp/: CMakeLists.txt  README.md
tutorials/08_imgwarp/CMake/toolchain/: android_armv8.cmake  android_mips.cmake  android_x86_64.cmake  linux_armv5.cmake  linux_ppc64.cmake  linux_x86.cmake  win_x86.cmake
tutorials/08_imgwarp/platform/android/: settings.gradle
tutorials/08_imgwarp/platform/ios/: View.h  View.m  (+1 more)
tutorials/08_imgwarp/src/: girl_data.c  tutorial_08.c  tutorial_08.h
tutorials/09_text/: CMakeLists.txt  README.md
tutorials/09_text/src/: font_common.c  font_common.h  tutorial_09.c  tutorial_09.h  vera_font.c  vera_font.h
tutorials/10_masking/: CMakeLists.txt  README.md
tutorials/10_masking/CMake/: checkSystem.cmake
tutorials/10_masking/CMake/toolchain/: linux_armv7.cmake  linux_mips.cmake  linux_x86.cmake  osx_ub.cmake
tutorials/10_masking/platform/android/: settings.gradle
tutorials/10_masking/platform/android/app/: build.gradle
tutorials/10_masking/platform/android/app/src/main/: AndroidManifest.xml
tutorials/10_masking/platform/android/app/src/main/java/com/mazatech/amanithvg/tutorial10/: MaskPaths.java  Ship.java  Tutorial.java  TutorialActivity.java  TutorialView.java
tutorials/10_masking/platform/android/app/src/main/java/javax/microedition/khronos/openvg/: AmanithVGJNI.java  VGFont.java  VGHandle.java  VGPaint.java  VGU.java  VGU101.java
tutorials/10_masking/platform/android/app/src/main/res/raw/: cloud.raw  star.raw
tutorials/10_masking/platform/android/app/src/main/res/values/: strings.xml
tutorials/10_masking/platform/ios/: ShaderTypes.h  View.h  View.m  main.m
tutorials/10_masking/platform/linux/: main.c
tutorials/10_masking/platform/macosx/: main.m  programs.metal
tutorials/10_masking/platform/win/: main.c  manifest.xml
tutorials/10_masking/src/: mask_images.c  mask_paths.c  ship.c  tutorial_10.c  tutorial_10.h
(+440 files in other folders)
